handle custom new properties in json "link_class" an "circle_class"

--- a/examples/index.html
+++ b/examples/index.html
@@ -9,6 +9,7 @@
 
     <script type="text/javascript" src="lib/ng-d3tree.js"></script>
     <link rel="stylesheet" href="lib/css/ng-d3tree.css" />
+    <link rel="stylesheet" href="lib/css/custom_style.css" />
 
 
 <!--     <script type="text/javascript" src="https://rawgit.com/komushi/ng-d3tree/master/src/ng-d3tree.js"></script>
